# netunicorn

./: .buildinfo  .gitignore  LICENSE  README.md  UI.html  contents.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg
_autosummary/: netunicorn.base.architecture.Architecture.html  netunicorn.base.architecture.html  netunicorn.base.deployment.Deployment.html  netunicorn.base.deployment.html  netunicorn.base.environment_definitions.BuildContext.html  netunicorn.base.environment_definitions.DockerImage.html  netunicorn.base.environment_definitions.EnvironmentDefinition.html  netunicorn.base.environment_definitions.RuntimeContext.html  netunicorn.base.environment_definitions.ShellExecution.html  netunicorn.base.environment_definitions.html  netunicorn.base.execution_graph.ExecutionGraph.html  netunicorn.base.execution_graph.html  netunicorn.base.experiment.DeploymentExecutionResult.html  netunicorn.base.experiment.Experiment.html  netunicorn.base.experiment.ExperimentExecutionInformation.html  netunicorn.base.experiment.ExperimentStatus.html  netunicorn.base.experiment.html  netunicorn.base.html  netunicorn.base.nodes.CountableNodePool.html  netunicorn.base.nodes.Node.html  netunicorn.base.nodes.Nodes.html  netunicorn.base.nodes.UncountableNodePool.html  netunicorn.base.nodes.html  netunicorn.base.pipeline.CyclePipeline.html  netunicorn.base.pipeline.Pipeline.html  netunicorn.base.pipeline.html  netunicorn.base.task.Task.html  netunicorn.base.task.TaskDispatcher.html  netunicorn.base.task.html  netunicorn.base.types.BuildContextRepresentation.html  netunicorn.base.types.DeploymentExecutionResultRepresentation.html  netunicorn.base.types.DeploymentRepresentation.html  netunicorn.base.types.DockerImageRepresentation.html  netunicorn.base.types.EnvironmentDefinitionRepresentation.html  netunicorn.base.types.ExecutorState.html  netunicorn.base.types.ExperimentExecutionInformationRepresentation.html  netunicorn.base.types.ExperimentRepresentation.html  netunicorn.base.types.FlagValues.html  netunicorn.base.types.NodeRepresentation.html  netunicorn.base.types.NodesRepresentation.html  (+13 more)
_sources/: UI.md.txt  contents.rst.txt  index.md.txt
administrator_docs/: connectors.html  database.html  deployment.html  users.html
architecture/: README.md  general_design.md  questions.md  requirements.md  vocabulary.md
design_docs/: README.html  general_design.html  general_design.md  index.html  milestones.html  milestones.md  questions.html  questions.md  requirements.html  userstory.html  vocabulary.html
docs/: .gitignore  README.md  general_design.md  milestones.md  requirements.md  requirements.txt  userstory.md  vocabulary.md
examples/: README.md  basic_example.ipynb  executiongraph.ipynb  external_experiment.ipynb  flags_example.ipynb  graph_example.ipynb  local_example.py  local_executor.ipynb  mininet_draft.py  speed_test_example.ipynb  tasks_and_dispatchers.ipynb  video_watchers_example.ipynb
misc/: requirements.dev.txt  template.executor.Dockerfile
netunicorn-base/: pyproject.toml  setup.cfg
netunicorn-base/src/netunicorn/base/: __init__.py  architecture.py  deployment.py  environment_definitions.py  execution_graph.py  experiment.py  minions.py  nodes.py  pipeline.py  task.py  types.py  utils.py
netunicorn-base/src/netunicorn/director/base/: resources.py  types.py  utils.py
netunicorn-base/src/netunicorn/director/base/connectors/: protocol.py  types.py
netunicorn-base/tests/: environment_definition.py  graphs.py  pipelines.py  serialization.py
netunicorn-client/: pyproject.toml  setup.cfg
netunicorn-client/src/netunicorn/client/: __init__.py  base.py  local.py  remote.py
netunicorn-director/netunicorn-authentication/: Dockerfile  pyproject.toml  setup.cfg
netunicorn-director/netunicorn-authentication/src/netunicorn/director/authentication/: __main__.py
netunicorn-director/netunicorn-authorization/: setup.cfg
netunicorn-director/netunicorn-authorization/src/netunicorn/director/authorization/: __main__.py
netunicorn-director/netunicorn-compilation/: Dockerfile  pyproject.toml  setup.cfg
netunicorn-director/netunicorn-compilation/src/netunicorn/director/compilation/: __main__.py  api_types.py  main.py
netunicorn-director/netunicorn-gateway/: Dockerfile  pyproject.toml  setup.cfg
netunicorn-director/netunicorn-gateway/src/netunicorn/director/gateway/: __main__.py  api.py  api_types.py
netunicorn-director/netunicorn-infrastructure/: .gitignore  Dockerfile  README.md  configuration-example.yaml  pyproject.toml  setup.cfg
netunicorn-director/netunicorn-infrastructure/src/netunicorn/director/infrastructure/: __main__.py  kernel.py  resources.py  server.py  tasks.py
netunicorn-director/netunicorn-infrastructure/src/netunicorn/director/infrastructure/connectors/: dummy.py  protocol.py  types.py
netunicorn-director/netunicorn-infrastructure/src/netunicorn/director/infrastructure/connectors/rest/: README.md  __init__.py  openapi-simple-rest.json  simple_rest.py  simple_rest_server.py
netunicorn-director/netunicorn-infrastructure/src/netunicorn/director/infrastructure/deployer_connectors/: azure_containers.py  base.py  mininet_draft.py  salt_connector.py
netunicorn-director/netunicorn-mediator/: Dockerfile  pyproject.toml  setup.cfg
netunicorn-director/netunicorn-mediator/src/netunicorn/director/mediator/: __main__.py  admin.py  engine.py  preprocessors.py  resources.py  ui_api.py
netunicorn-director/netunicorn-mediator/src/netunicorn/director/mediator/templates/: admin.html
netunicorn-director/netunicorn-processor/: Dockerfile  pyproject.toml  setup.cfg
netunicorn-director/netunicorn-processor/src/netunicorn/director/processor/: __main__.py  engine.py  postprocessors.py
netunicorn-executor/: pyproject.toml  setup.cfg
netunicorn-executor/src/netunicorn/executor/: __init__.py  __main__.py  executor.py  utils.py
netunicorn-executor/tests/: basic.py  traverse_on.py
netunicorn-library/: pyproject.toml  setup.cfg
netunicorn-meta/: pyproject.toml
(+218 files in other folders)
