[metadata]
name = pinot
version = 0.0.1
description = Dummy description
license = MIT
keywords = pinot
author = Roman Beltiukov
author_email = rbeltiukov@ucsb.edu
url = pinot.cs.ucsb.edu
classifiers =
  Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    returns
    cloudpickle
    requests

[options.extras_require]
master =
    pydantic
    fastapi
    redis-py
    uvicorn
    aiohttp
salt =
    salt

[options.packages.find]
include=pinot*
