[project]
name = "netunicorn-base"
version = "0.2.6"
authors = [
    {name = "Roman Beltiukov", email = "rbeltiukov@ucsb.edu"},
]
description = "netunicorn base module"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["netunicorn"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "returns",
    "typing-extensions",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.7"
ignore_missing_imports = true
strict = true
explicit_package_bases = true
exclude = "tests"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"