[project]
name = "netunicorn-base"
version = "0.4.0"
authors = [
    {name = "Roman Beltiukov", email = "rbeltiukov@ucsb.edu"},
]
description = "netunicorn base module"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["netunicorn"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "returns >= 0.20.0",
    "typing-extensions",
    "pydantic >= 2.0.0",
    "networkx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
netunicorn = ["py.typed"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict = true
explicit_package_bases = true
exclude = "tests"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"