[project]
name = "netunicorn-client"
version = "0.2.3"
authors = [
    {name = "Roman Beltiukov", email = "rbeltiukov@ucsb.edu"},
]
description = "netunicorn client module"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["netunicorn"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "netunicorn-base >= 0.2.0",
    "cloudpickle",
    "requests",
    "returns",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.7"
ignore_missing_imports = true
explicit_package_bases = true
strict = true
exclude = "tests"