[project]
name = "netunicorn-client"
version = "0.3.0"
authors = [
    {name = "Roman Beltiukov", email = "rbeltiukov@ucsb.edu"},
]
description = "netunicorn client module"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["netunicorn"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "netunicorn-base >= 0.3.0",
    "cloudpickle",
    "requests",
    "returns",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
explicit_package_bases = true
strict = true
exclude = "tests"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"