[project]
name = "netunicorn-director-authentication"
version = "0.2.0"
authors = [
    {name = "Roman Beltiukov", email = "rbeltiukov@ucsb.edu"},
]
description = "netunicorn authentication module"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["netunicorn"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncpg",
    "bcrypt",
    "netunicorn-base >= 0.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]