[metadata]
name = netunicorn-director-authorization
version = 0.0.1
description = Dummy description
license = MIT
keywords = netunicorn
author = Roman Beltiukov
author_email = rbeltiukov@ucsb.edu
classifiers =
  Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    fastapi
    uvicorn
    netunicorn-base

[options.packages.find]
where = src