[project]
name = "netunicorn-director-gateway"
version = "0.2.0"
authors = [
    {name = "Roman Beltiukov", email = "rbeltiukov@ucsb.edu"},
]
description = "netunicorn gateway module"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["netunicorn"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "netunicorn-base >= 0.2.0",
    "fastapi",
    "uvicorn",
    "asyncpg",
]

[tool.setuptools.packages.find]
where = ["src"]