[project]
name = "netunicorn-director-infrastructure"
version = "0.2.1"
authors = [
    {name = "Roman Beltiukov", email = "rbeltiukov@ucsb.edu"},
]
description = "netunicorn infrastructure module"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["netunicorn"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi",
    "netunicorn-base >= 0.2.0",
    "uvicorn",
    "asyncpg",
    "pyyaml",
    "returns",
    "aiohttp",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true