[metadata]
name = netunicorn-director-infrastructure
version = 0.1.2
description = Dummy description
license = MIT
keywords = netunicorn
author = Roman Beltiukov
author_email = rbeltiukov@ucsb.edu
classifiers =
  Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    fastapi
    uvicorn
    redis
    netunicorn-base

[options.packages.find]
where = src