[project]
name = "netunicorn-director-mediator"
version = "0.3.3"
authors = [
    {name = "Roman Beltiukov", email = "rbeltiukov@ucsb.edu"},
]
description = "netUnicorn mediator module"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["netunicorn"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "netunicorn-base >= 0.3.7",
    "fastapi",
    "uvicorn",
    "asyncpg",
    "returns",
    "requests",
    "jinja2"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.html"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
explicit_package_bases = true
strict = true
exclude = "tests"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"