[project]
name = "netunicorn-director-processor"
version = "0.4.1"
authors = [
    {name = "Roman Beltiukov", email = "rbeltiukov@ucsb.edu"},
]
description = "netunicorn processor module"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["netunicorn"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "netunicorn-base >= 0.4.0, < 0.5.0",
    "asyncpg",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
explicit_package_bases = true
strict = true
exclude = "tests"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
